--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
         text-align: center;
         padding: 10px 0;
       }
+      input {
+        padding: 4px;
+        width: 200px;
+        border-radius: 5px;
+        border: 1px solid #ccc;
+      }
     </style>
   </head>
   <body>
